# pdflib-2.0.1-patched-ubuntu

./: Makefile  Makefile.in  PDFlib.dsw  PDFlib.mcp  README.md  config.cache  config.status  configure  configure.in  readme.txt
bind/c/: Makefile  Makefile.in  c.dsp  hello.c  pdfclock.c  readme.txt
bind/cgi/: pdfclock.cgi
bind/cpp/: Cplusplus.dsp  Makefile  Makefile.in  hello.cpp  pdfclock.cpp  pdflib.cpp  pdflib.hpp  readme.txt
bind/java/: Java.dsp  Makefile  Makefile.in  hello.java  pdfclock.java  pdflib.java  pdflib_java.c  readme.txt
bind/perl/: Makefile  Makefile.PL  Makefile.PL.in  Makefile.in  Perl.dsp  hello.pl  pdfclock.pl  pdflib.pm  pdflib_pl.c  readme.txt
bind/python/: Makefile  Makefile.in  Python.dsp  hello.py  pdfclock.py  pdflib_py.c  readme.txt
bind/tcl/: Makefile  Makefile.in  Tcl.dsp  hello.tcl  pdfclock.tcl  pdflib_tcl.c  pkgIndex.tcl  readme.txt
bind/vb/: VisualBasic.dsp  hello.bas  pdfclock.bas  pdflib_vb.def  pdflib_vb.idl  readme.txt
clients/: Makefile  Makefile.in  pdfgraph.c  pdfimage.c  text2pdf.c
doc/: changes.txt  compatibility.txt  install.txt
fonts/: Helvetica-Bold.afm  Helvetica-BoldOblique.afm  Helvetica-Oblique.afm  Helvetica.afm  Times-Bold.afm  Times-BoldItalic.afm  Times-Italic.afm  Times-Roman.afm  pdflib.upr  readme.txt
pdflib/: Makefile  Makefile.in  ansi_e.h  macrom_e.h  p_afmparse.c  p_afmparse.h  p_annots.c  p_basic.c  p_ccitt.c  p_color.c  p_config.h  p_draw.c  p_filter.c  p_font.c  p_gif.c  p_gstate.c  p_hyper.c  p_image.c  p_intern.h  p_jpeg.c  p_metrics.h  p_text.c  p_tiff.c  p_util.c  pdfdoc_e.h  pdflib.dsp  pdflib.h  pdflib.i  pdflib_static.dsp
test/: Makefile  Makefile.in  acroweb_j.tif  graphdata  pdftest.c  test.dsp  tm.g3
util/: Makefile  Makefile.in  compile_metrics.c
